--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32dev]
-platform = espressif32
+platform = espressif32@3.4.0
 board = esp32dev
 framework = arduino
 ;upload_port = COM5
@@ -17,4 +17,5 @@ framework = arduino
 monitor_speed = 115200
 monitor_filters = send_on_enter
 monitor_echo = true
+platform_packages = tool-esptoolpy@1.30100.210531
 
