first boost test

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,8 +21,9 @@ platform_packages = tool-esptoolpy@1.30100.210531
 
 [env:test]
 platform = native
-build_src_filter = +<C:\Users\User\Documents\PlatformIO\projects\Roasters\ESP_WiFi_Socket\test\*>
+build_src_filter = +<D:\Documentos\PlatformIO\projects\Roasters\ESP_WiFi_Socket\test\*>
 build_flags = 
+	-I"C:\Program Files\boost\boost_1_82_0"
 	-LC:\Windows\System32
 	-lws2_32
 	-DUNITY_INCLUDE_DOUBLE -DUNITY_DOUBLE_PRECISION=1e-12
