New clases, compilation ok both test and deploy

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,7 +21,9 @@ platform_packages = tool-esptoolpy@1.30100.210531
 
 [env:test]
 platform = native
-build_src_filter = +<D:\Documentos\PlatformIO\projects\Roasters\ESP_WiFi_Socket\test\*>
+build_src_filter = 
+	+<D:\Documentos\PlatformIO\projects\Roasters\ESP_WiFi_Socket\test\*>
+	+<D:\Documentos\PlatformIO\projects\Roasters\ESP_WiFi_Socket\src\*>
 build_flags = 
 	-I"C:\Program Files\boost\boost_1_82_0"
 	-LC:\Windows\System32
