--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,31 +12,31 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "d:/Documentos/PlatformIO/Projects/Roasters/ESP_WiFi_Socket/.pio/build/esp32dev/firmware.elf",
-            "projectEnvName": "esp32dev",
-            "toolchainBinDir": "C:/Users/EQUIPO/.platformio/packages/toolchain-xtensa32/bin",
+            "executable": "d:/Documentos/PlatformIO/Projects/Roasters/ESP_WiFi_Socket/.pio/build/test/program.exe",
+            "projectEnvName": "test",
+            "toolchainBinDir": "C:/msys64/ucrt64/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "preLaunchTask": {
                 "type": "PlatformIO",
-                "task": "Pre-Debug (esp32dev)"
+                "task": "Pre-Debug (test)"
             }
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "d:/Documentos/PlatformIO/Projects/Roasters/ESP_WiFi_Socket/.pio/build/esp32dev/firmware.elf",
-            "projectEnvName": "esp32dev",
-            "toolchainBinDir": "C:/Users/EQUIPO/.platformio/packages/toolchain-xtensa32/bin",
+            "executable": "d:/Documentos/PlatformIO/Projects/Roasters/ESP_WiFi_Socket/.pio/build/test/program.exe",
+            "projectEnvName": "test",
+            "toolchainBinDir": "C:/msys64/ucrt64/bin",
             "internalConsoleOptions": "openOnSessionStart"
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "d:/Documentos/PlatformIO/Projects/Roasters/ESP_WiFi_Socket/.pio/build/esp32dev/firmware.elf",
-            "projectEnvName": "esp32dev",
-            "toolchainBinDir": "C:/Users/EQUIPO/.platformio/packages/toolchain-xtensa32/bin",
+            "executable": "d:/Documentos/PlatformIO/Projects/Roasters/ESP_WiFi_Socket/.pio/build/test/program.exe",
+            "projectEnvName": "test",
+            "toolchainBinDir": "C:/msys64/ucrt64/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "loadMode": "manual"
         }
